added requirement table

--- a/components/cards/feature-card-header.component.html
+++ b/components/cards/feature-card-header.component.html
@@ -24,7 +24,7 @@ influence=" high or medium"
     }
     .feature-card--header__name {
         color: #000;
-        width: 65px;
+/*        width: 65px;*/
         height: 100%;
         border-right: 1px solid #DCDCDC;
         display: -webkit-inline-flex;
@@ -38,6 +38,8 @@ influence=" high or medium"
         font: 10px 'globersemibold';
         text-transform: uppercase;
         padding-top: 2px;
+        padding-left: 10px;
+        padding-right: 3px;
     }
     .feature-card--header__text {
         font: 11px 'globerregular';
