--- a/components/cards/requirement-card.component.html
+++ b/components/cards/requirement-card.component.html
@@ -20,6 +20,11 @@
         flex-direction: column;
         position: relative;
     }
+    requirement-column-parent requirement-card {
+
+        margin-top: 10px;
+/*        margin-bottom: 27px;*/
+    }
     requirement-card:after {
         background: linear-gradient(to bottom, #D90000 33%,#84E2E7 33%, #84E2E7 66%, #4F50B7 33%);
         position: absolute;
