--- a/components/kanban/doing-wrapp.component.html
+++ b/components/kanban/doing-wrapp.component.html
@@ -10,7 +10,7 @@
         display: inline-flex;
 /*        min-width: 320px;*/
         margin-right: 7px;
-        justify-content: flex-end;
+/*        justify-content: flex-end;*/
     }
 
 </style>
