--- a/components/roadmap/style.css
+++ b/components/roadmap/style.css
@@ -55,12 +55,15 @@
 }
 
 .roadmap__row-wrapper {
-    height: 600px;
     width: 100%;
     padding-top: 30px;
 }
 
 .roadmap__row {
+    position: relative;
+}
+
+.roadmap__row-vvr {
     margin-top: 40px;
     height: 124px;
     position: relative;
@@ -92,6 +95,7 @@
     display: -ms-flex;
     display: -o-flex;
     display: flex;
+    overflow: hidden;
 }
 
 .roadmap__time-grahp:after {
@@ -108,7 +112,9 @@
     flex-direction: column;
     text-align: center;
     z-index: 2;
-    position: relative;
+    position: absolute;
+    width: 16%;
+    height: 100%;
 }
 
 .milestones-date {
@@ -156,4 +162,47 @@
     display: block;
     position: relative;
     margin: 40px 15% 0 auto;
+}
+
+.roadmap__row--item {
+    background-color: #FAFAFA;
+    margin-top: 7px;
+    padding: 6px 0;
+    min-height: 104px;
+}
+
+.roadmap__task-line {
+    position: relative;
+    z-index: 1;
+    height: 46px;
+}
+
+.roadmap__task-item {
+    display: inline-block;
+    font: 13px/22px globerbold;
+    padding: 6px 15px 0;
+    border: 1px solid #D1D1D1;
+    border-radius: 2px;
+    margin: 8px 0;
+    background-color: #ECFFE9;
+    /*position: absolute;*/
+}
+
+.roadmap__row-header-block {
+    position: absolute;
+    height: 100%;
+    /*width: 150px;*/
+    text-align: center;
+    margin-left: -30px;
+    margin-top: -6px;
+    transform: rotate(270deg);
+    text-transform: uppercase;
+}
+
+.roadmap__row-item-header {
+    padding-top: 10px;
+    background-color: #157907;
+    color: white;
+    font: 13px globerbold;
+    height: 30px;
 }
