--- a/components/requirement-table/requirement-column-child.component.html
+++ b/components/requirement-table/requirement-column-child.component.html
@@ -38,12 +38,8 @@
 
         connectedCallback() {
             this.appendChild(RequirementColumnChildTemplate.content.cloneNode(true));
-            if (this.childElementCount == 0) {
-                this.parentElement.style.width = '320px'
-            }
-            if (this.childElementCount == 0) {
-
-            }
+            // console.log(this.style.width);
+           
         }
 
         adoptedCallback() {
