--- a/components/requirement-table/requirement-column-parent.component.html
+++ b/components/requirement-table/requirement-column-parent.component.html
@@ -15,6 +15,8 @@
         flex-direction: column;
         padding-right: 10px;
         padding-left: 10px;
+        border-right: 1px solid #D7D7D7;;
+        /*border-bottom: 1px solid #D7D7D7;;*/
     }
     .plus--down {
         display: -webkit-inline-flex;
