--- a/components/requirement-table/requirement-type-row.component.html
+++ b/components/requirement-table/requirement-type-row.component.html
@@ -1,7 +1,7 @@
 <!--Style CSS-->
 <style>
     requirement-type-row {
-        min-height: 176px;
+        /*min-height: 176px;*/
         width: 100%;
         display: -webkit-flex;
         display: -moz-flex;
@@ -13,7 +13,7 @@
     }
     .requirement-type-row__header {
         width: 30px;
-        background-color: #1A2BA2;
+        background-color: #e1e1e1;
         display: -webkit-flex;
         display: -moz-flex;
         display: -ms-flex;
@@ -61,13 +61,25 @@
             this.appendChild(RequirementTypeRowTemplate.content.cloneNode(true));
 
             this.querySelector('.requirement-type-row__header').innerHTML = this.getAttribute('title');
+            this.getElementsByTagName('requirement-column-wrapp')[0].style.borderBottom = 0;
+            this.getElementsByTagName('requirement-column-wrapp')[0].style.borderRightColor = '#D7D7D7';
+            
+            // console.log(thatDoc.querySelectorAll('requirement-type-row'));
+            var rowCollection = thatDoc.querySelectorAll('requirement-type-row');
+            var colorRowHeader = ['#1A2BA2', '#D18315', '#007160', '#7F0004'];
+            // var rowHeader = this.querySelector('.requirement-type-row__header');
+            for (var i = 0; i < rowCollection.length; i++) {
+                if (rowCollection[i].querySelector('.requirement-type-row__header') !== null) {
+                 rowCollection[i].querySelector('.requirement-type-row__header').style.backgroundColor = colorRowHeader[i];
+                }
+            } 
         }
 
         adoptedCallback() {
 
         }
     }
-
+    
     customElements.define('requirement-type-row', RequirementTypeRow);
 
 </script>
