--- a/components/cards/requirement-card.component.html
+++ b/components/cards/requirement-card.component.html
@@ -88,7 +88,7 @@
  
             // }
             // borderColor = borderColor.slice(0, -1);
-            console.log(colorBlock);
+            // console.log(colorBlock);
 
             // cardBorder.style.backgroundImage = 'linear-gradient(to bottom,' + borderColor + ')';
             
