--- a/components/requirement-table/requirement-column-child.component.html
+++ b/components/requirement-table/requirement-column-child.component.html
@@ -11,6 +11,7 @@
         -ms-flex-direction: column;
         -o-flex-direction: column;
         flex-direction: column;
+        min-width: 320px;
     }
 
 </style>
