--- a/components/requirement-table/requirement-column-parent.component.html
+++ b/components/requirement-table/requirement-column-parent.component.html
@@ -16,7 +16,28 @@
         padding-right: 10px;
         padding-left: 10px;
         border-right: 1px solid #D7D7D7;;
-        /*border-bottom: 1px solid #D7D7D7;;*/
+        border-bottom: 1px solid #D7D7D7;;
+        position: relative;
+        padding-bottom: 27px;
+    }
+    .plus--right {
+        display: -webkit-inline-flex;
+        display: -moz-inline-flex;
+        display: -ms-inline-flex;
+        display: -o-inline-flex;
+        display: inline-flex;
+        width: 14px;
+        height: 14px;
+        border: 1px solid #0085BE;
+        border-radius: 50%;
+        -ms-align-self: center;
+        align-self: center;
+        position: absolute;
+        right: -20px;
+        top: 50%;
+        margin-top: -7px;
+        /*opacity: 0.3;*/
+        display: none;
     }
     .plus--down {
         display: -webkit-inline-flex;
@@ -28,14 +49,20 @@
         height: 14px;
         border: 1px solid #0085BE;
         border-radius: 50%;
-        margin-top: 7px;
-        margin-bottom: 6px;
+        left: 50%;
+        margin-left: -7px;
         -ms-align-self: center;
         align-self: center;
-        position: relative;
+        position: absolute;
+        bottom: 7px;
+        display: none;
+        /*opacity: 0.3;*/
     }
-    .plus--down:hover {
+    .plus--down:hover,
+    .plus--right:hover {
         cursor: pointer;
+        opacity: 1;
+        transition: all 1s;
     }
     .plus--line {
         width: 2px;
@@ -69,6 +96,10 @@
     <span class="plus--line"></span>
     <span class="plus--line"></span>
 </div>
+<div class="plus--right">
+    <span class="plus--line"></span>
+    <span class="plus--line"></span>
+</div>
 </template>
 
 
@@ -88,7 +119,24 @@
 
         connectedCallback() {
             this.appendChild(RequirementColumnParentTemplate.content.cloneNode(true));
-
+            let plusDownBtn = this.querySelector('.plus--down');
+            let plusRightBtn = this.querySelector('.plus--right');
+            // console.log(this.querySelector('.plus--down'))
+            plusDownBtn.addEventListener("click", () => {
+                let addedDown = plusRightBtn.parentElement.parentElement.parentElement;
+                let nextWrapp = new RequirementColumnWrapp;
+                nextWrapp.appendChild(new RequirementColumnParent()).appendChild(new FeatureCard());
+                nextWrapp.appendChild(new RequirementColumnChild());
+                addedDown.appendChild(nextWrapp);
+            });
+             plusRightBtn.addEventListener("click", () => {
+                let addedRight = plusRightBtn.parentElement.parentElement.children[1];
+                let nextWrapp = thatDoc.createElement('requirement-column-wrapp');
+                nextWrapp.appendChild(new RequirementColumnParent()).appendChild(new FeatureCard());
+                nextWrapp.appendChild(new RequirementColumnChild());
+                addedRight.appendChild(nextWrapp);
+                plusRightBtn.parentElement.parentElement.setAttribute('last', 'false');
+            });
         }
 
         adoptedCallback() {
